syntax = "proto3";

package user;

service UserService {
  rpc Create(User) returns (User) {}
  rpc FindAll(Empty) returns (Users) {}
  rpc FindOne(UserById) returns (User) {}
  rpc Update(UpdateUserRequest) returns (User) {}
  rpc Remove(UserById) returns (Empty) {}
}

message Empty {}

message UserById {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  User user = 2;
}

message User {
  string id = 1;
  string keycloak_id = 2;
  string email = 3;
  string created_at = 4;
}

message Users {
  repeated User users = 1;
}